Add WorkoutSessionDTO